--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
                         <p class="project__container_subtitle_two project__container_subtitle">Квартира с двумя спальнями в холодных тонах 
                             для семьи с дочкой-подростком</p>
                         <div class="project__container_group2">
-                        <a href="#" class="project__container_link">открыть проект<img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
+                        <a href="./metropoliya.html" class="project__container_link">открыть проект<img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
                         <p class="project__container_metre">70 м2</p>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                         </div>
                             <p class="project__container_subtitle_three project__container_subtitle">Светлая акцентная квартира для семьи с двумя детьми</p>
                     <div class="project__container_group2">
-                    <a href="#" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
+                    <a href="./sheremetevskiy.html" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
                     <p class="project__container_metre">95 м2</p>
                     </div>
                     </div>
@@ -87,7 +87,7 @@
                         </div>
                             <p class="project__container_subtitle_four project__container_subtitle">Апартаменты-студия для девушки</p>
                         <div class="project__container_group2">
-                        <a href="#" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
+                        <a href="./discoverpark.html" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
                         <p class="project__container_metre">29 м2</p>
                         </div>
                     </div>
@@ -100,7 +100,7 @@
                         </div>
                             <p class="project__container_subtitle">Квартира для семейной пары</p>
                         <div class="project__container_group2">
-                        <a href="#" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
+                        <a href="./octoberpole.html" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
                         <p class="project__container_metre">55 м2</p>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                         </div>
                             <p class="project__container_subtitle">Современное прочтение классики для двух человек- мамы и дочки.</p>
                         <div class="project__container_group2">
-                        <a href="#" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
+                        <a href="./novosherem.html" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
                         <p class="project__container_metre">100 м2</p>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                         </div>
                             <p class="project__container_subtitle">Оливково-терракотовая квартира для девушки.</p>
                         <div class="project__container_group2">
-                        <a href="#" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
+                        <a href="./preobrajenskya.html" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
                         <p class="project__container_metre">55 м2</p>
                         </div>
                     </div>
@@ -163,6 +163,8 @@
             </section>
         </div>
 </body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="./index.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
