--- a/preobrajenskya.html
+++ b/preobrajenskya.html
@@ -89,5 +89,6 @@
         </section>
     </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="./index.js"></script>
 </html>
