--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                 </ul>
             </section>
             <section class="project">
-                <div data-aos="fade-left"  class="project__container project__container_even project__container__example_one">
+                <div data-aos="fade-left"  class="project__container project__container_even project__container__example_one project__container_margin">
                     <div class="project__container_text">
                         <div class="project__container_text_title">
                             <p class="project__container_year">2020</p>
