--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 </head>
 <body>
         <div class="page">
-            <section data-aos="fade-down"  class="header header__portfolio">
+            <section  class="header header__portfolio">
                 <h1 class="header__title">\Портфолио</h1>
                 <div class="header__menu">
                     <a class="header__menu_text header__menu_home" href='./index.html'>Home</a>
