--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             </div>
                         </div>
                     </div>
-                    <button class="project__btn"><p class="project__btn_text">полное портфолио</p> <img src="./image/Vector.svg" alt="стрелочка" class="project__btn_image"></button>
+                    <button class="project__btn"><a href="./portfolio.html" class="project__btn_text">полное портфолио</a> <img src="./image/Vector.svg" alt="стрелочка" class="project__btn_image"></button>
                 </section>
                 <section class="adv">
                     <a name="why_we"></a>
